25.oct (la)
      - fix #7665: Change instrument, undo does not undo sound
23.oct (la)
      - fix default fingering font
22.oct (la)
      - fix #7624: pressing space bar when slur is selected crashes program
      - fix #7562: Cursor in text remains in print or PDF
17.oct (la)
      - fix #7530: Hairpin starting on the first note is lost on reload
14.oct (la)
      - fix #7514: Moving instrument deletes tuplets
      - fix #7520: Undo reorder instruments does not work as expected
      - fix #7519: Moving instrument causes crash
10.oct (db)
      - fix: Local Handbook disabled when no file is open
28.sep (ws)
      - limit values in time signature wizard to 6 bit (1-63)
        (#7315)
25.sep (db)
      - fix #6649: Transposition when creating a score from a template

 ======== MuseScore 0.9.6.3 released ==============
24.sep (la)
      - fix #7150: Changing soundfont does not work for audio export
23.sep (la)
      - fix #7233: Transpose by diminished second doesn't work (0.9.6 branch regression)
      - fix #7232: D.S. after coda sign freezes playback
23.sep (la)
      - Apply patch for ARM qreal bug
22.sep (ws)
      - tuplet bracket was only movable in x-direction in edit mode
      (la)
      - fix #7211: Copy/Paste notes over rest of diff. durations in staves
21.sep (la)
      - fix #7167: Time signature change causes triplets to corrupt score
      - fix #7142: Crescendo & delete measures problems
      - fix #7197: MuseScore fails to open MSCZ files with capitals
      - fix #6932: Changing notehead of a breve crash
      - add access to DPI, notehead, note bounding box and note position from plugin framework
            (Patch by Mikhail Eliseev)
14.sep (la)
      - fix #7077: Applying double-note tremolo to dotted notes fails and alter measure duration
30.aug (db)
      - fix #6937: Measure Properties should be modal dialog
29.aug (la)
      - fix #6775: Seg. fault by double clicking any element twice